--- a/frontend/src/app/modules/vagas/vagas.component.css
+++ b/frontend/src/app/modules/vagas/vagas.component.css
@@ -40,6 +40,12 @@
     border-radius: 20px;
 }
 
+@media screen and (max-width: 500px) {
+    .form-container .search-vagas {
+        flex-direction: column;
+    }
+}
+
 .form-container .search-vagas img {
     width: 15px;
 }
